--- a/mackup/.mackup.cfg
+++ b/mackup/.mackup.cfg
@@ -15,5 +15,10 @@ zoom
 
 [application]
 iterm2
+
 [configuration_files]
 ~/Library/Preferences/com.googlecode.iterm2.plist
+~/Library/Preferences/com.iktm.snap.plist
+
+[applications_to_ignore]
+ssh
