--- a/iterm2/preferences/com.googlecode.iterm2.plist
+++ b/iterm2/preferences/com.googlecode.iterm2.plist
@@ -40,6 +40,17 @@
 			<key>Version</key>
 			<integer>1</integer>
 		</dict>
+		<key>0x2f-0x100000-0x2c</key>
+		<dict>
+			<key>Action</key>
+			<integer>38</integer>
+			<key>Label</key>
+			<string></string>
+			<key>Text</key>
+			<string>gcc</string>
+			<key>Version</key>
+			<integer>1</integer>
+		</dict>
 		<key>0x44-0x120000-0x2</key>
 		<dict>
 			<key>Action</key>
@@ -65,11 +76,44 @@
 		<key>0x64-0x100000-0x2</key>
 		<dict>
 			<key>Action</key>
+			<integer>38</integer>
+			<key>Label</key>
+			<string></string>
+			<key>Text</key>
+			<string>:copy .\n</string>
+			<key>Version</key>
+			<integer>1</integer>
+		</dict>
+		<key>0x71-0x100000-0xc</key>
+		<dict>
+			<key>Action</key>
+			<integer>38</integer>
+			<key>Label</key>
+			<string></string>
+			<key>Text</key>
+			<string>gK</string>
+			<key>Version</key>
+			<integer>1</integer>
+		</dict>
+		<key>0x71-0x40000-0xc</key>
+		<dict>
+			<key>Action</key>
 			<integer>13</integer>
 			<key>Label</key>
 			<string></string>
 			<key>Text</key>
 			<string></string>
+			<key>Version</key>
+			<integer>1</integer>
+		</dict>
+		<key>0x73-0x100000-0x1</key>
+		<dict>
+			<key>Action</key>
+			<integer>38</integer>
+			<key>Label</key>
+			<string></string>
+			<key>Text</key>
+			<string>:wa\n</string>
 			<key>Version</key>
 			<integer>1</integer>
 		</dict>
