iterm vim cmd enter

--- a/iterm2/preferences/com.googlecode.iterm2.plist
+++ b/iterm2/preferences/com.googlecode.iterm2.plist
@@ -127,11 +127,11 @@
 		<key>0xd-0x100000-0x24</key>
 		<dict>
 			<key>Action</key>
-			<integer>13</integer>
+			<integer>38</integer>
 			<key>Label</key>
 			<string></string>
 			<key>Text</key>
-			<string></string>
+			<string>:wa\n:bd\n</string>
 			<key>Version</key>
 			<integer>1</integer>
 		</dict>
