--- a/iterm2/preferences/com.googlecode.iterm2.plist
+++ b/iterm2/preferences/com.googlecode.iterm2.plist
@@ -5201,17 +5201,6 @@
 			<key>Version</key>
 			<integer>1</integer>
 		</dict>
-		<key>0x77-0x100000-0xd</key>
-		<dict>
-			<key>Action</key>
-			<integer>13</integer>
-			<key>Label</key>
-			<string></string>
-			<key>Text</key>
-			<string></string>
-			<key>Version</key>
-			<integer>1</integer>
-		</dict>
 		<key>0x9-0x40000</key>
 		<dict>
 			<key>Action</key>
@@ -5335,6 +5324,8 @@
 	<integer>256</integer>
 	<key>IRMemory</key>
 	<integer>4</integer>
+	<key>MinimalSplitPaneDividerProminence</key>
+	<real>0.15000000596046448</real>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
