--- a/dotfiles/.config/git/config
+++ b/dotfiles/.config/git/config
@@ -1,5 +1,14 @@
+[pull]
+  ; rebase = true
+  autoStash = true
+[rebase]
+  autoStash = true
+[merge]
+  autosStash = true
 [alias]
   mranch = !git symbolic-ref refs/remotes/origin/HEAD | cut -d'/' -f4
-  fresh = !git stash && git fetch origin $(git mranch):$(git mranch) && git merge $(git mranch) && git stash pop
-  fresh-b = "!f() { git switch $(git mranch) && git pull --rebase --autostash && git checkout -b $1; }; f"
+  fresh = !git pull origin $(git mranch) && git merge $(git mranch) 
+  fresh-b = "!f() { git switch $(git mranch) && git pull && git checkout -b $1; }; f"
+  swibr = "!f() { stash_me=$(git stash save 'on-switch'); stashed=$(echo $stash_me|grep 'on-switch'); git switch $1; if [ '$stashed' ]; then git stash pop; fi; }; f"
+  drop = !git reset --hard
 
