--- a/dotfiles/.config/git/config
+++ b/dotfiles/.config/git/config
@@ -3,12 +3,19 @@
   autoStash = true
 [rebase]
   autoStash = true
+[mergetool]
+  prompt = false
+  keepBackup = false
+  keepTemporaries = false
 [merge]
   autosStash = true
+  tool = nvim_diffview
+[mergetool "nvim_diffview"]
+  cmd = NVIM_APPNAME=lazyvim nvim -c 'DiffviewOpen'
 [alias]
   mranch = !git symbolic-ref refs/remotes/origin/HEAD | cut -d'/' -f4
   fresh = !git pull origin $(git mranch) && git merge $(git mranch) 
   fresh-b = "!f() { git switch $(git mranch) && git pull && git checkout -b $1; }; f"
   swibr = "!f() { stash_me=$(git stash save 'on-switch'); stashed=$(echo $stash_me|grep 'on-switch'); git switch $1; if [ '$stashed' ]; then git stash pop; fi; }; f"
-  drop = !git rebase --abort && git reset --hard
+  nuke = !git rebase --abort && git reset --hard && git clean -fd
 
