--- a/dotfiles/.config/git/config
+++ b/dotfiles/.config/git/config
@@ -17,7 +17,7 @@
 [alias]
   ; mranch = !git symbolic-ref refs/remotes/origin/HEAD | cut -d'/' -f4
   ; mranch = !git ls-remote --symref origin HEAD
-  mranch = !git branch -l main master --format '%(refname:short)'
+  mranch = branch -l main master --format '%(refname:short)'
   ma = "!f() { git switch $(git mranch); git pull; }; f"
   ; fresh = !git fetch origin $(git mranch):$(git mranch) && git merge $(git mranch) 
   fresh = "!f() { stash_me=$(git stash save 'on-fresh'); stashed=$(echo $stash_me|grep 'on-fresh'); git fetch origin $(git mranch):$(git mranch); git merge $(git mranch); if [ '$stashed' ]; then git stash pop; fi; }; f"
@@ -25,5 +25,5 @@
   swibr = "!f() { stash_me=$(git stash save 'on-switch'); stashed=$(echo $stash_me|grep 'on-switch'); git switch $1; if [ '$stashed' ]; then git stash pop; fi; }; f"
   nuke = !git rebase --abort && git reset --hard && git clean -fd
   tree = log --graph --abbrev-commit --decorate=no --date=format:'%Y-%m-%d %H:%I:%S' --format=format:'%C(dim white)%>|(26)%h%C(reset)  %C(green)%ad%C(reset)  %C(blue)%<(16,trunc)%an%C(reset)  %C(bold 1)%d%C(reset) %C(bold white)%>|(1)%s%C(reset)' --all
-  full-tree = log --graph --format=tformat:'%C(bold yellow)%h%C(reset) %C(cyan)%aD%C(reset) %C(green)(%ar) %C(dim white)%aN%C(reset)%w(0,0,9)%n %C(brightwhite)%s%C(auto)%+d%C(reset)%w(0,0,10)%+b'
+  full-tree = log --graph --date=format:'%Y-%m-%d %H:%I:%S' --format=tformat:'%C(dim white)%h%C(reset) %C(green)%ad%C(reset) %C(bold blue)%aN%C(reset)%w(0,0,9)%n %C(bold magenta)%s%C(auto)%+d%C(reset)%w(0,0,10)%+b'
 
