--- a/mackup/.tmux.conf
+++ b/mackup/.tmux.conf
@@ -1,1 +1,16 @@
+set -g status-bg colour16
+set-option -g status-position top
+set-option -g status-right ""
+
 setw -g mode-keys vi
+set -g mouse on
+
+set-option -g prefix C-a
+unbind-key C-a
+bind-key C-a send-prefix
+
+bind-key v split-window -h
+bind-key h split-window -v
+
+bind -n S-Left previous-window
+bind -n S-Right next-window
