skhd instead of snap

--- a/mackup/.mackup.cfg
+++ b/mackup/.mackup.cfg
@@ -12,11 +12,11 @@ karabiner-elements
 sublime-text
 spectacle
 lazygit
+skhd
 
 [application]
 
 [configuration_files]
-~/Library/Preferences/com.iktm.snap.plist
 
 [applications_to_ignore]
 ssh
