--- a/mackup/.tmux.conf
+++ b/mackup/.tmux.conf
@@ -14,3 +14,5 @@ bind-key h split-window -v
 
 bind -n S-Left previous-window
 bind -n S-Right next-window
+
+bind-key w choose-window -F "#{window_index}: #{window_name}#{window_flags}"
