--- a/mackup/.tmux.conf
+++ b/mackup/.tmux.conf
@@ -16,3 +16,5 @@ bind -n S-Left previous-window
 bind -n S-Right next-window
 
 bind-key w choose-window -F "#{window_index}: #{window_name}#{window_flags}"
+
+set -g default-terminal "screen-256color"
