skhd clear_notifications

--- a/mackup/.skhdrc
+++ b/mackup/.skhdrc
@@ -17,7 +17,7 @@ alt - m : open '/Applications/Spotify.app'
 alt - g : open '/Applications/DataGrip.app'
 alt - p : open '/Applications/1Password.app'
 alt - o : open '/Applications/Postman.app'
-alt - q : open '~/bin/clear_notifications'
+alt - q : osascript $HOME/bin/clear_notifications
 
 # 0x2B = ,
 alt - 0x2B : open -a iCal
