--- a/mackup/.tmux.conf
+++ b/mackup/.tmux.conf
@@ -12,9 +12,14 @@ bind-key C-a send-prefix
 bind-key v split-window -h
 bind-key h split-window -v
 
+# rebind to remove confirmation warnings 
+bind-key & kill-window
+bind-key x kill-pane
+
 bind -n S-Left previous-window
 bind -n S-Right next-window
 
 bind-key w choose-window -F "#{window_index}: #{window_name}#{window_flags}"
 
 set -g default-terminal "screen-256color"
+set -s extended-keys on
