small tmux changes

--- a/mackup/.tmux.conf
+++ b/mackup/.tmux.conf
@@ -23,3 +23,7 @@ bind-key w choose-window -F "#{window_index}: #{window_name}#{window_flags}"
 
 set -g default-terminal "screen-256color"
 set -s extended-keys on
+set -as terminal-features 'xterm*:extkeys'
+
+# bind -n "C-;" send-keys '^[[59;5u'
+# bind -n "C-i" send-keys '^[[105;5u'
