handled S-Space for files search via iterm2 hex codes

--- a/iterm2/preferences/com.googlecode.iterm2.plist
+++ b/iterm2/preferences/com.googlecode.iterm2.plist
@@ -5095,6 +5095,19 @@
 			<key>Text</key>
 			<string></string>
 		</dict>
+		<key>0x20-0x20000-0x31</key>
+		<dict>
+			<key>Action</key>
+			<integer>11</integer>
+			<key>Apply Mode</key>
+			<integer>0</integer>
+			<key>Escaping</key>
+			<integer>2</integer>
+			<key>Text</key>
+			<string>0x1b 0x20</string>
+			<key>Version</key>
+			<integer>2</integer>
+		</dict>
 		<key>0x2d-0x100000-0x1b</key>
 		<dict>
 			<key>Action</key>
@@ -5164,17 +5177,6 @@
 			<integer>2</integer>
 		</dict>
 		<key>0x71-0x100000-0xc</key>
-		<dict>
-			<key>Action</key>
-			<integer>13</integer>
-			<key>Label</key>
-			<string></string>
-			<key>Text</key>
-			<string></string>
-			<key>Version</key>
-			<integer>1</integer>
-		</dict>
-		<key>0x71-0x40000-0xc</key>
 		<dict>
 			<key>Action</key>
 			<integer>13</integer>
@@ -6314,6 +6316,8 @@
 			<integer>34</integer>
 			<key>Transparency</key>
 			<real>0.0</real>
+			<key>Treat Option as Alt</key>
+			<false/>
 			<key>Unlimited Scrollback</key>
 			<false/>
 			<key>Use Bold Font</key>
