clear openFile lazygit key

--- a/mackup/.config/lazygit/config.yml
+++ b/mackup/.config/lazygit/config.yml
@@ -30,6 +30,8 @@ gui:
     "Artem Kolomeetc": "yellow"
     "*": "#b4befe"
 keybinding:
+  universal:
+    openFile: ""
   files:
     toggleTreeView: t
     commitChangesWithEditor: <disabled>
