--- a/dotfiles/.config/git/config
+++ b/dotfiles/.config/git/config
@@ -19,11 +19,11 @@
   ; mranch = !git ls-remote --symref origin HEAD
   mranch = branch -l main master --format '%(refname:short)'
   ma = "!f() { git switch $(git mranch); git pull; }; f"
-  ; fresh = !git fetch origin $(git mranch):$(git mranch) && git merge $(git mranch) 
+  ; fresh = !git fetch origin $(git mranch):$(git mranch) && git merge $(git mranch)
   stash-pull = "!f() { stash_me=$(git stash save 'on-fresh'); stashed=$(echo $stash_me|grep 'on-fresh'); git pull; if [ '$stashed' ]; then git stash pop; fi; }; f"
-  fresh = "!f() { stash_me=$(git stash save 'on-fresh'); stashed=$(echo $stash_me|grep 'on-fresh'); git fetch origin $(git mranch):$(git mranch); git merge $(git mranch) --no-edit; if [ '$stashed' ]; then git stash pop; fi; }; f"
-  fresh-b = "!f() { git switch $(git mranch) && git pull && git checkout -b $1; }; f"
-  swibr = "!f() { stash_me=$(git stash save 'on-switch'); stashed=$(echo $stash_me|grep 'on-switch'); git switch $1; if [ '$stashed' ]; then git stash pop; fi; }; f"
+  stash-merge = "!f() { stash_me=$(git stash save 'on-fresh'); stashed=$(echo $stash_me|grep 'on-fresh'); git fetch origin $(git mranch):$(git mranch); git merge $(git mranch) --no-edit; if [ '$stashed' ]; then git stash pop; fi; }; f"
+  fresh-branch = "!f() { git switch $(git mranch) && git pull && git checkout -b $1; }; f"
+  stash-switch = "!f() { stash_me=$(git stash save 'on-switch'); stashed=$(echo $stash_me|grep 'on-switch'); git switch $1; if [ '$stashed' ]; then git stash pop; fi; }; f"
   reset-one = !git checkout origin/$(git mranch)
   merge-no-more=merge --no-commit --no-ff
   nuke = !git rebase --abort & git reset --hard && git clean -fd
